# grass

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Changes.md  Grass.sln  LICENSE  Makefile  README.md  build.cmd  build.ps1  changes.txt  grass.sln  grass.vcxproj  grass.vcxproj.filters  vcpkg-configuration.json  vcpkg.json
Grass/: CMakeLists.txt  Grass.cpp  Grass.h  Grass.vcxproj  Grass.vcxproj.filters  README.md
Grass/Sandbox/: MyGame.cpp  MyGame.h  main.cpp  main.h
Grass/core/: Game.cpp  Game.h  Input.cpp
Grass/include/: Grass.hpp
Grass/include/core/: App.h  Scene.h
Grass/include/logging/: Logging.hpp
Grass/include/objects/: Box.h  Sprite.h
Grass/include/stuff/: Color.h  Funcs.h  Vec2.h
Grass/include/ui/: Button.h  Textbox.h
Grass/math/: Size.h  Vector2.cpp
Grass/objects/: Entity.cpp  Entity.h
Grass/src/: Grass.cpp
Grass/src/core/: App.cpp  Scene.cpp
Grass/src/objects/: Box.cpp  Sprite.cpp
Grass/src/stuff/: Funcs.cpp  Vec2.cpp
Grass/src/ui/: Button.cpp  Textbox.cpp
Grass/utils/: Color.cpp  Color.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  MyScene.cpp  MyScene.h
TemplateProject/: Game.h  TemplateProject.vcxproj  TemplateProject.vcxproj.filters  main.cpp
sandbox/: MyGame.cpp  MyGame.h  Sandbox.vcxproj  Sandbox.vcxproj.filters  main.cpp
src/: Grass.cpp  Grass.h
src/core/: Application.cpp  Application.h  Game.cpp  Game.h  Input.cpp  Input.h  app.cpp  app.h  scene.cpp  scene.h
template_proj/: Game.cpp  main.cpp
template_project/: Game.cpp  Game.h
testing/: main.cpp  testing.vcxproj
(+34 files in other folders)
